--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.11.5
 Click==7.0
 cryptography==2.4.2
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-SQLAlchemy==2.3.2
 idna==2.8
 itsdangerous==1.1.0
