--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==2.4.2
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-SQLAlchemy==2.3.2
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -17,6 +18,7 @@ psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
 pycparser==2.19
 PyJWT==1.7.1
+python-dotenv==0.10.1
 six==1.12.0
 SQLAlchemy==1.2.15
 Werkzeug==0.14.1
